# docs/swagger.json
@@ -106,7 +106,7 @@
         },
         "/quotes/update": {
             "post": {
-                "description": "Asks the system to fetch and update the latest exchange rate for a given pair.",
+                "description": "Asks the system to fetch and update the latest exchange rate for a given pairr.",
                 "consumes": [
                     "application/json"
                 ],
@@ -126,6 +126,13 @@
                         "schema": {
                             "$ref": "#/definitions/internal_delivery_http.requestUpdateRequest"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "default": "uuid",
+                        "description": "Idempotency Key",
+                        "name": "X-Idempotency-Key",
+                        "in": "header"
                     }
                 ],
                 "responses": {
